[gd_scene load_steps=9 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://look/GradientMap.shader" type="Shader" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.538462, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.55957, 0.101641, 0, 1, 1, 0.650391, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 256

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/mix_amount = 0.5
shader_param/gradient = SubResource( 2 )

[sub_resource type="OpenSimplexNoise" id=4]
seed = 40
octaves = 9
period = 206.3
persistence = 0.688

[sub_resource type="NoiseTexture" id=5]
width = 1024
height = 600
noise = SubResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
material = SubResource( 3 )
margin_right = 40.0
margin_bottom = 40.0
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="World" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="TileMap2" type="TileMap" parent="World"]
modulate = Color( 0.5, 0.255, 0.255, 0.501961 )
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 2 )
format = 1

[node name="TileMap" type="TileMap" parent="World"]
scale = Vector2( 0.1, 0.1 )
tile_set = ExtResource( 2 )
format = 1

[node name="Threshold" type="SpinBox" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -95.3574
margin_top = 20.0226
margin_right = -21.3574
margin_bottom = 44.0226
min_value = -1.0
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Octaves" type="SpinBox" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -95.3574
margin_top = 52.0226
margin_right = -21.3574
margin_bottom = 76.0226
min_value = 1.0
max_value = 8.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seed" type="TextEdit" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -207.357
margin_top = 20.0226
margin_right = -133.357
margin_bottom = 44.0226
text = "Random"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Threshold" to="World" method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="Octaves" to="World" method="_on_Octaves_value_changed"]
[connection signal="text_changed" from="Seed" to="World" method="_on_Seed_text_changed"]
